--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "homepage": "https://github.com/realglobe-Inc/pon-task-css#readme",
   "dependencies": {
     "aglob": "^2.0.1",
-    "asfs": "^1.2.3",
     "autoprefixer": "^6.7.7",
     "co": "^4.6.0",
+    "pon-task-compile": "^1.0.1",
     "postcss": "^5.2.16",
     "postcss-cssnext": "^2.10.0"
   },
