--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "aglob": "^2.0.1",
     "autoprefixer": "^6.7.7",
     "co": "^4.6.0",
-    "pon-task-compile": "^1.0.1",
+    "pon-task-compile": "^1.0.3",
+    "pon-task-watch": "^1.0.1",
     "postcss": "^5.2.16",
     "postcss-cssnext": "^2.10.0"
   },
@@ -44,7 +45,7 @@
     "colorprint": "^4.1.0",
     "coz": "^6.0.20",
     "injectmock": "^2.0.0",
-    "pon-context": "^1.1.3",
+    "pon-context": "^1.1.4",
     "pon-doc": "^1.0.1",
     "sugos-travis": "^2.0.7",
     "writeout": "^2.1.0"
