--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pon-task-css",
-  "version": "2.0.2",
+  "version": "2.1.0",
   "description": "Pon task to compile css",
   "main": "lib",
   "browser": "shim/browser",
@@ -25,6 +25,7 @@
   "dependencies": {
     "autoprefixer": "^7.1.1",
     "co": "^4.6.0",
+    "pon-cache": "^1.0.1",
     "pon-task-compile": "^2.1.5",
     "postcss": "^6.0.1",
     "postcss-cssnext": "^2.11.0"
