--- a/package.json
+++ b/package.json
@@ -23,30 +23,31 @@
   },
   "homepage": "https://github.com/realglobe-Inc/pon-task-css#readme",
   "dependencies": {
-    "autoprefixer": "^7.1.4",
+    "autoprefixer": "^7.1.5",
     "pon-cache": "^1.0.1",
     "pon-task-compile": "^3.0.1",
-    "postcss": "^6.0.11",
+    "postcss": "^6.0.13",
     "postcss-cssnext": "^3.0.2"
   },
   "devDependencies": {
     "ababel": "^2.0.2",
     "ababel-es2015": "^2.0.2",
-    "amocha": "^2.0.0",
+    "amocha": "^4.0.0",
     "ape-doc": "^2.0.4",
     "ape-formatting": "^1.0.2",
     "ape-releasing": "^4.0.4",
     "ape-tasking": "^4.0.9",
-    "ape-tmpl": "^6.0.0",
+    "ape-tmpl": "^6.0.2",
     "ape-updating": "^4.1.1",
     "asleep": "^1.0.3",
     "colorprint": "^4.1.0",
     "coz": "^6.0.20",
+    "eslint": "^4.8.0",
     "injectmock": "^2.0.0",
     "pon-context": "^2.0.2",
     "pon-doc": "^2.0.1",
     "sugos-travis": "^2.0.7",
-    "writeout": "^2.2.0"
+    "writeout": "^2.2.1"
   },
   "engines": {
     "node": ">=7.6",
