Add auto prefix

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clean-css": "^4.1.9",
     "pon-cache": "^1.0.1",
     "pon-task-compile": "^3.0.3",
+    "pon-task-fs": "^3.1.3",
     "postcss": "^6.0.14",
     "postcss-cssnext": "^3.0.2",
     "postcss-modules": "^1.1.0"
