--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pon-task-css",
-  "version": "5.0.7",
+  "version": "5.1.0",
   "description": "Pon task to compile css",
   "main": "lib",
   "browser": "shim/browser",
@@ -25,26 +25,27 @@
   "dependencies": {
     "adigest": "^3.0.0",
     "asfs": "^2.0.3",
+    "autoprefixer": "^8.5.1",
     "clean-css": "^4.1.11",
     "pon-cache": "^1.0.1",
     "pon-task-compile": "^3.0.3",
-    "pon-task-fs": "^3.1.4",
-    "postcss": "^6.0.21",
+    "pon-task-fs": "^3.1.5",
+    "postcss": "^6.0.22",
     "postcss-cssnext": "^3.1.0",
     "postcss-modules": "^1.1.0"
   },
   "devDependencies": {
-    "ababel": "^4.0.8",
+    "ababel": "^4.0.9",
     "amocha": "^5.0.0",
     "ape-doc": "^2.0.4",
     "ape-formatting": "^1.0.2",
     "ape-releasing": "^4.0.4",
     "ape-tasking": "^4.0.9",
     "ape-tmpl": "^6.0.10",
-    "ape-updating": "^4.1.1",
+    "ape-updating": "^5.0.1",
     "asleep": "^1.0.3",
     "colorprint": "^4.1.0",
-    "coz": "^7.0.1",
+    "coz": "^7.0.2",
     "eslint": "^4.19.1",
     "injectmock": "^2.0.0",
     "pon-context": "^3.0.2",
