--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pon-task-css",
-  "version": "5.1.3",
+  "version": "6.0.0",
   "description": "Pon task to compile css",
   "main": "lib",
   "browser": "shim/browser",
@@ -31,8 +31,8 @@
     "pon-task-compile": "^3.0.4",
     "pon-task-fs": "^3.1.5",
     "postcss": "^6.0.23",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-modules": "^1.1.0"
+    "postcss-modules": "^1.1.0",
+    "postcss-preset-env": "^5.2.0"
   },
   "devDependencies": {
     "ababel": "^4.0.9",
