--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pon-task-compile": "^4.0.0",
     "pon-task-fs": "^3.1.6",
     "postcss": "^7.0.2",
+    "postcss-discard-duplicates": "^4.0.0",
     "postcss-modules": "^1.3.2",
     "postcss-preset-env": "^5.3.0"
   },
