--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pon-task-css",
-  "version": "8.0.8",
+  "version": "8.0.9",
   "description": "Pon task to compile css",
   "main": "lib",
   "browser": "shim/browser",
@@ -27,10 +27,11 @@
     "asfs": "^2.2.1",
     "autoprefixer": "^9.4.8",
     "clean-css": "^4.2.1",
-    "pon-cache": "^1.0.1",
+    "pon-cache": "^1.0.2",
     "pon-task-compile": "^4.0.5",
     "pon-task-fs": "^3.1.8",
     "postcss": "^7.0.14",
+    "postcss-csso": "^3.0.0",
     "postcss-discard-duplicates": "^4.0.2",
     "postcss-modules": "^1.4.1",
     "postcss-preset-env": "^6.5.0"
@@ -40,17 +41,17 @@
     "amocha": "^5.0.1",
     "ape-doc": "^2.0.4",
     "ape-formatting": "^2.0.1",
-    "ape-releasing": "^5.0.3",
-    "ape-tasking": "^4.0.11",
+    "ape-releasing": "^5.0.7",
+    "ape-tasking": "^4.0.12",
     "ape-tmpl": "^6.0.13",
-    "ape-updating": "^5.0.2",
+    "ape-updating": "^5.0.3",
     "asleep": "^1.0.3",
-    "colorprint": "^4.1.0",
-    "coz": "^7.0.12",
+    "colorprint": "^5.0.0",
+    "coz": "^7.0.16",
     "eslint": "^5.14.1",
     "injectmock": "^2.0.0",
     "pon-context": "^3.0.2",
-    "pon-doc": "^2.0.1",
+    "pon-doc": "^3.0.1",
     "writeout": "^2.2.3"
   },
   "engines": {
